refactor: refactor env variables